--- a/influx-connector/query.ipynb
+++ b/influx-connector/query.ipynb
@@ -72,17 +72,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from influxdb_client import InfluxDBClient\n",
+    "import pytz\n",
     "import warnings\n",
+    "from influxdb_client import InfluxDBClient\n",
     "from influxdb_client.client.warnings import MissingPivotFunction\n",
     "\n",
     "warnings.simplefilter(\"ignore\", MissingPivotFunction)\n",
@@ -91,30 +93,35 @@
     "org = \"polito\"\n",
     "client = InfluxDBClient(url=\"http://localhost:8086\", token=token, org=org, debug=False)\n",
     "bucket = \"iot\"\n",
-    "start_time = \"2023-11-07T14:00:00.000000Z\"\n",
-    "stop_time = \"2023-11-07T15:00:00.000000Z\"\n",
-    "cpu_list = ['cpu0', 'cpu1', 'cpu2', 'cpu3']\n",
+    "start_time = \"2023-11-07T15:30:00.000000Z\"\n",
+    "stop_time = \"2023-11-07T15:40:00.000000Z\"\n",
+    "cpu_list = ['cpu0', 'cpu1', 'cpu2', 'cpu3', 'cpu4']\n",
     "query_field = \"value\"\n",
     "filter_expression = ' or '.join([f'r[\"sensor_name\"] == \"{sensor}\"' for sensor in cpu_list])\n",
-    "# query = f'from(bucket: \"{bucket}\") \\\n",
-    "#                   |> range(start: {start_time}, stop: {stop_time}) \\\n",
-    "#                   |> filter(fn: (r) => r[\"sensor_name\"] == \"cpu0\" or r[\"sensor_name\"] == \"cpu1\" or r[\"sensor_name\"] == \"cpu2\") \\\n",
-    "#                   |> filter(fn: (r) => r[\"_field\"] == \"{query_field}\")'\n",
     "\n",
+    "# query time date must be UTC to match InfluDB default timezone.\n",
     "query = f'from(bucket: \"{bucket}\") \\\n",
     "                  |> range(start: {start_time}, stop: {stop_time}) \\\n",
     "                  |> filter(fn: (r) => {filter_expression}) \\\n",
     "                  |> filter(fn: (r) => r[\"_field\"] == \"{query_field}\")'\n",
     "\n",
-    "# r[\"sensor_name\"] == \"cpu0\" or r[\"sensor_name\"] == \"cpu1\" or r[\"sensor_name\"] == \"cpu2\n",
-    "\n",
     "query_api = client.query_api()\n",
-    "result = query_api.query_data_frame(query=str(query))"
+    "result = query_api.query_data_frame(query=str(query))\n",
+    "# df = result[['_time', '_value', '_measurement', 'sensor_name', 'use_case']]\n",
+    "\n",
+    "# def convert_to_rome_time(row):\n",
+    "#         dt = row['_time']\n",
+    "#         rome_tz = pytz.timezone('Europe/Rome')\n",
+    "#         rome_time = dt.astimezone(rome_tz)\n",
+    "#         row['_time'] = rome_time\n",
+    "#         return row\n",
+    "\n",
+    "# df = df.apply(convert_to_rome_time, axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +154,6 @@
        "      <th>_field</th>\n",
        "      <th>_measurement</th>\n",
        "      <th>sensor_name</th>\n",
-       "      <th>use_case</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -155,66 +161,61 @@
        "      <th>0</th>\n",
        "      <td>_result</td>\n",
        "      <td>0</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:00:02.298914+00:00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:30:03.431335+00:00</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>value</td>\n",
        "      <td>PC</td>\n",
        "      <td>cpu0</td>\n",
-       "      <td>use_case1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>_result</td>\n",
        "      <td>0</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:00:08.297433+00:00</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:30:09.432523+00:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>value</td>\n",
        "      <td>PC</td>\n",
        "      <td>cpu0</td>\n",
-       "      <td>use_case1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>_result</td>\n",
        "      <td>0</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:00:14.300047+00:00</td>\n",
-       "      <td>1.6</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:30:15.433960+00:00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>value</td>\n",
        "      <td>PC</td>\n",
        "      <td>cpu0</td>\n",
-       "      <td>use_case1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>_result</td>\n",
        "      <td>0</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:00:20.309470+00:00</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:30:21.435530+00:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>value</td>\n",
        "      <td>PC</td>\n",
        "      <td>cpu0</td>\n",
-       "      <td>use_case1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>_result</td>\n",
        "      <td>0</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:00:26.305296+00:00</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:30:27.437114+00:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>value</td>\n",
        "      <td>PC</td>\n",
        "      <td>cpu0</td>\n",
-       "      <td>use_case1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -227,122 +228,103 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1507</th>\n",
+       "      <th>495</th>\n",
        "      <td>_result</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:49:57.321030+00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:39:33.578915+00:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>value</td>\n",
        "      <td>PC</td>\n",
-       "      <td>cpu2</td>\n",
-       "      <td>use_case1</td>\n",
+       "      <td>cpu4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1508</th>\n",
+       "      <th>496</th>\n",
        "      <td>_result</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:50:03.322282+00:00</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>value</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>cpu2</td>\n",
-       "      <td>use_case1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1509</th>\n",
-       "      <td>_result</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:50:09.321667+00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:39:39.578569+00:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>value</td>\n",
        "      <td>PC</td>\n",
-       "      <td>cpu2</td>\n",
-       "      <td>use_case1</td>\n",
+       "      <td>cpu4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1510</th>\n",
+       "      <th>497</th>\n",
        "      <td>_result</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:50:15.323226+00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:39:45.635645+00:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>value</td>\n",
        "      <td>PC</td>\n",
-       "      <td>cpu2</td>\n",
-       "      <td>use_case1</td>\n",
+       "      <td>cpu4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1511</th>\n",
+       "      <th>498</th>\n",
        "      <td>_result</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-11-07 14:00:00+00:00</td>\n",
-       "      <td>2023-11-07 15:00:00+00:00</td>\n",
-       "      <td>2023-11-07 14:50:21.324573+00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:39:51.585145+00:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>value</td>\n",
        "      <td>PC</td>\n",
-       "      <td>cpu2</td>\n",
-       "      <td>use_case1</td>\n",
+       "      <td>cpu4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>_result</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-11-07 15:30:00+00:00</td>\n",
+       "      <td>2023-11-07 15:40:00+00:00</td>\n",
+       "      <td>2023-11-07 15:39:57.589394+00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>value</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1512 rows × 10 columns</p>\n",
+       "<p>500 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       result  table                    _start                     _stop  \\\n",
-       "0     _result      0 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
-       "1     _result      0 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
-       "2     _result      0 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
-       "3     _result      0 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
-       "4     _result      0 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
-       "...       ...    ...                       ...                       ...   \n",
-       "1507  _result      2 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
-       "1508  _result      2 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
-       "1509  _result      2 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
-       "1510  _result      2 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
-       "1511  _result      2 2023-11-07 14:00:00+00:00 2023-11-07 15:00:00+00:00   \n",
+       "      result  table                    _start                     _stop  \\\n",
+       "0    _result      0 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
+       "1    _result      0 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
+       "2    _result      0 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
+       "3    _result      0 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
+       "4    _result      0 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
+       "..       ...    ...                       ...                       ...   \n",
+       "495  _result      4 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
+       "496  _result      4 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
+       "497  _result      4 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
+       "498  _result      4 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
+       "499  _result      4 2023-11-07 15:30:00+00:00 2023-11-07 15:40:00+00:00   \n",
        "\n",
-       "                                _time  _value _field _measurement sensor_name  \\\n",
-       "0    2023-11-07 14:00:02.298914+00:00     0.0  value           PC        cpu0   \n",
-       "1    2023-11-07 14:00:08.297433+00:00     0.0  value           PC        cpu0   \n",
-       "2    2023-11-07 14:00:14.300047+00:00     1.6  value           PC        cpu0   \n",
-       "3    2023-11-07 14:00:20.309470+00:00     0.0  value           PC        cpu0   \n",
-       "4    2023-11-07 14:00:26.305296+00:00     0.0  value           PC        cpu0   \n",
-       "...                               ...     ...    ...          ...         ...   \n",
-       "1507 2023-11-07 14:49:57.321030+00:00     0.0  value           PC        cpu2   \n",
-       "1508 2023-11-07 14:50:03.322282+00:00     7.8  value           PC        cpu2   \n",
-       "1509 2023-11-07 14:50:09.321667+00:00     0.0  value           PC        cpu2   \n",
-       "1510 2023-11-07 14:50:15.323226+00:00     0.0  value           PC        cpu2   \n",
-       "1511 2023-11-07 14:50:21.324573+00:00     0.0  value           PC        cpu2   \n",
+       "                               _time  _value _field _measurement sensor_name  \n",
+       "0   2023-11-07 15:30:03.431335+00:00     1.5  value           PC        cpu0  \n",
+       "1   2023-11-07 15:30:09.432523+00:00     0.0  value           PC        cpu0  \n",
+       "2   2023-11-07 15:30:15.433960+00:00     0.0  value           PC        cpu0  \n",
+       "3   2023-11-07 15:30:21.435530+00:00     0.0  value           PC        cpu0  \n",
+       "4   2023-11-07 15:30:27.437114+00:00     0.0  value           PC        cpu0  \n",
+       "..                               ...     ...    ...          ...         ...  \n",
+       "495 2023-11-07 15:39:33.578915+00:00     0.0  value           PC        cpu4  \n",
+       "496 2023-11-07 15:39:39.578569+00:00     0.0  value           PC        cpu4  \n",
+       "497 2023-11-07 15:39:45.635645+00:00     0.0  value           PC        cpu4  \n",
+       "498 2023-11-07 15:39:51.585145+00:00     0.0  value           PC        cpu4  \n",
+       "499 2023-11-07 15:39:57.589394+00:00     0.0  value           PC        cpu4  \n",
        "\n",
-       "       use_case  \n",
-       "0     use_case1  \n",
-       "1     use_case1  \n",
-       "2     use_case1  \n",
-       "3     use_case1  \n",
-       "4     use_case1  \n",
-       "...         ...  \n",
-       "1507  use_case1  \n",
-       "1508  use_case1  \n",
-       "1509  use_case1  \n",
-       "1510  use_case1  \n",
-       "1511  use_case1  \n",
-       "\n",
-       "[1512 rows x 10 columns]"
+       "[500 rows x 9 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,6 +752,128 @@
    ],
    "source": [
     "filter_expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "相对路径: net1.py\n",
+      "绝对路径: c:\\Users\\39349\\Documents\\GitHub\\DeviceHive-Yingjun\\influx-connector\\net1.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# 相对路径\n",
+    "relative_path = 'net1.py'\n",
+    "\n",
+    "# 获取相对路径的绝对路径\n",
+    "absolute_path = os.path.abspath(relative_path)\n",
+    "\n",
+    "print(\"相对路径:\", relative_path)\n",
+    "print(\"绝对路径:\", absolute_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV 文件生成成功！\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# 定义测试数据\n",
+    "query_params = {\n",
+    "    \"query_type\": \"useCase1\",\n",
+    "    \"sensor_ids\": [\"cpu0\", \"cpu1\"],\n",
+    "    \"start_time\": \"2023-11-07T15:30:00.000000Z\",\n",
+    "    \"stop_time\": \"2023-11-07T16:00:00.000000Z\"\n",
+    "}\n",
+    "query_params = {\n",
+    "    \"sensor_ids\":\"['cpu0', 'cpu1', 'cpu2', 'cpu3', 'cpu4']\",\n",
+    "    \"start_time\":\"2023-11-07T15:30:00.000000Z\",\n",
+    "    \"stop_time\":\"2023-11-07T17:00:00.000000Z\",\n",
+    "    \"query_type\":\"use_case2\"\n",
+    "}\n",
+    "# 发送 POST 请求\n",
+    "response = requests.post(\"http://localhost:8000/export_csv/\", json=query_params)\n",
+    "\n",
+    "# 检查响应\n",
+    "if response.status_code == 200:\n",
+    "    print(\"CSV 文件生成成功！\")\n",
+    "else:\n",
+    "    print(f\"响应状态码: {response.status_code}\")\n",
+    "    print(\"CSV 文件生成失败。\")\n",
+    "\n",
+    "# 如果需要，可以打印响应内容\n",
+    "# print(response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "响应状态码: 500\n",
+      "CSV 文件生成失败。\n",
+      "错误信息:\n",
+      "{\"detail\":\"Error: The file 'influxdb_config.json.json' does not exist.\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "if response.status_code == 200:\n",
+    "    print(\"CSV 文件生成成功！\")\n",
+    "else:\n",
+    "    print(f\"响应状态码: {response.status_code}\")\n",
+    "    print(\"CSV 文件生成失败。\")\n",
+    "    print(\"错误信息:\")\n",
+    "    print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cpu0', 'cpu1', 'cpu2', 'cpu3', 'cpu4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = \"['cpu0', 'cpu1', 'cpu2', 'cpu3', 'cpu4']\"\n",
+    "\n",
+    "# 移除字符串中的方括号和单引号\n",
+    "cleaned_input = user_input.replace(\"[\", \"\").replace(\"]\", \"\").replace(\"'\", \"\")\n",
+    "\n",
+    "# 使用逗号分割字符串并创建列表\n",
+    "sensor_ids_list = cleaned_input.split(', ')\n",
+    "\n",
+    "# 输出结果\n",
+    "print(sensor_ids_list)"
    ]
   },
   {
