--- a/influx-connector/query.ipynb
+++ b/influx-connector/query.ipynb
@@ -783,45 +783,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CSV 文件生成成功！\n"
+     "ename": "ValueError",
+     "evalue": "Invalid file path or buffer object type: <class 'dict'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\39349\\Documents\\GitHub\\DeviceHive-Yingjun\\influx-connector\\query.ipynb Cell 15\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/39349/Documents/GitHub/DeviceHive-Yingjun/influx-connector/query.ipynb#X20sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mif\u001b[39;00m response\u001b[39m.\u001b[39mstatus_code \u001b[39m==\u001b[39m \u001b[39m200\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/39349/Documents/GitHub/DeviceHive-Yingjun/influx-connector/query.ipynb#X20sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     json_data \u001b[39m=\u001b[39m response\u001b[39m.\u001b[39mjson()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/39349/Documents/GitHub/DeviceHive-Yingjun/influx-connector/query.ipynb#X20sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_json(json_data)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/39349/Documents/GitHub/DeviceHive-Yingjun/influx-connector/query.ipynb#X20sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/39349/Documents/GitHub/DeviceHive-Yingjun/influx-connector/query.ipynb#X20sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m响应状态码: \u001b[39m\u001b[39m{\u001b[39;00mresponse\u001b[39m.\u001b[39mstatus_code\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\39349\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\json\\_json.py:760\u001b[0m, in \u001b[0;36mread_json\u001b[1;34m(path_or_buf, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, precise_float, date_unit, encoding, encoding_errors, lines, chunksize, compression, nrows, storage_options, dtype_backend, engine)\u001b[0m\n\u001b[0;32m    757\u001b[0m \u001b[39mif\u001b[39;00m convert_axes \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m orient \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mtable\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    758\u001b[0m     convert_axes \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m--> 760\u001b[0m json_reader \u001b[39m=\u001b[39m JsonReader(\n\u001b[0;32m    761\u001b[0m     path_or_buf,\n\u001b[0;32m    762\u001b[0m     orient\u001b[39m=\u001b[39;49morient,\n\u001b[0;32m    763\u001b[0m     typ\u001b[39m=\u001b[39;49mtyp,\n\u001b[0;32m    764\u001b[0m     dtype\u001b[39m=\u001b[39;49mdtype,\n\u001b[0;32m    765\u001b[0m     convert_axes\u001b[39m=\u001b[39;49mconvert_axes,\n\u001b[0;32m    766\u001b[0m     convert_dates\u001b[39m=\u001b[39;49mconvert_dates,\n\u001b[0;32m    767\u001b[0m     keep_default_dates\u001b[39m=\u001b[39;49mkeep_default_dates,\n\u001b[0;32m    768\u001b[0m     precise_float\u001b[39m=\u001b[39;49mprecise_float,\n\u001b[0;32m    769\u001b[0m     date_unit\u001b[39m=\u001b[39;49mdate_unit,\n\u001b[0;32m    770\u001b[0m     encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[0;32m    771\u001b[0m     lines\u001b[39m=\u001b[39;49mlines,\n\u001b[0;32m    772\u001b[0m     chunksize\u001b[39m=\u001b[39;49mchunksize,\n\u001b[0;32m    773\u001b[0m     compression\u001b[39m=\u001b[39;49mcompression,\n\u001b[0;32m    774\u001b[0m     nrows\u001b[39m=\u001b[39;49mnrows,\n\u001b[0;32m    775\u001b[0m     storage_options\u001b[39m=\u001b[39;49mstorage_options,\n\u001b[0;32m    776\u001b[0m     encoding_errors\u001b[39m=\u001b[39;49mencoding_errors,\n\u001b[0;32m    777\u001b[0m     dtype_backend\u001b[39m=\u001b[39;49mdtype_backend,\n\u001b[0;32m    778\u001b[0m     engine\u001b[39m=\u001b[39;49mengine,\n\u001b[0;32m    779\u001b[0m )\n\u001b[0;32m    781\u001b[0m \u001b[39mif\u001b[39;00m chunksize:\n\u001b[0;32m    782\u001b[0m     \u001b[39mreturn\u001b[39;00m json_reader\n",
+      "File \u001b[1;32mc:\\Users\\39349\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\json\\_json.py:861\u001b[0m, in \u001b[0;36mJsonReader.__init__\u001b[1;34m(self, filepath_or_buffer, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, precise_float, date_unit, encoding, lines, chunksize, compression, nrows, storage_options, encoding_errors, dtype_backend, engine)\u001b[0m\n\u001b[0;32m    859\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m filepath_or_buffer\n\u001b[0;32m    860\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mengine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mujson\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m--> 861\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_data_from_filepath(filepath_or_buffer)\n\u001b[0;32m    862\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_preprocess_data(data)\n",
+      "File \u001b[1;32mc:\\Users\\39349\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\json\\_json.py:901\u001b[0m, in \u001b[0;36mJsonReader._get_data_from_filepath\u001b[1;34m(self, filepath_or_buffer)\u001b[0m\n\u001b[0;32m    894\u001b[0m filepath_or_buffer \u001b[39m=\u001b[39m stringify_path(filepath_or_buffer)\n\u001b[0;32m    895\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m    896\u001b[0m     \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(filepath_or_buffer, \u001b[39mstr\u001b[39m)\n\u001b[0;32m    897\u001b[0m     \u001b[39mor\u001b[39;00m is_url(filepath_or_buffer)\n\u001b[0;32m    898\u001b[0m     \u001b[39mor\u001b[39;00m is_fsspec_url(filepath_or_buffer)\n\u001b[0;32m    899\u001b[0m     \u001b[39mor\u001b[39;00m file_exists(filepath_or_buffer)\n\u001b[0;32m    900\u001b[0m ):\n\u001b[1;32m--> 901\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles \u001b[39m=\u001b[39m get_handle(\n\u001b[0;32m    902\u001b[0m         filepath_or_buffer,\n\u001b[0;32m    903\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    904\u001b[0m         encoding\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mencoding,\n\u001b[0;32m    905\u001b[0m         compression\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcompression,\n\u001b[0;32m    906\u001b[0m         storage_options\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstorage_options,\n\u001b[0;32m    907\u001b[0m         errors\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mencoding_errors,\n\u001b[0;32m    908\u001b[0m     )\n\u001b[0;32m    909\u001b[0m     filepath_or_buffer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles\u001b[39m.\u001b[39mhandle\n\u001b[0;32m    910\u001b[0m \u001b[39melif\u001b[39;00m (\n\u001b[0;32m    911\u001b[0m     \u001b[39misinstance\u001b[39m(filepath_or_buffer, \u001b[39mstr\u001b[39m)\n\u001b[0;32m    912\u001b[0m     \u001b[39mand\u001b[39;00m filepath_or_buffer\u001b[39m.\u001b[39mlower()\u001b[39m.\u001b[39mendswith(\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    915\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m file_exists(filepath_or_buffer)\n\u001b[0;32m    916\u001b[0m ):\n",
+      "File \u001b[1;32mc:\\Users\\39349\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\common.py:716\u001b[0m, in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    713\u001b[0m     codecs\u001b[39m.\u001b[39mlookup_error(errors)\n\u001b[0;32m    715\u001b[0m \u001b[39m# open URLs\u001b[39;00m\n\u001b[1;32m--> 716\u001b[0m ioargs \u001b[39m=\u001b[39m _get_filepath_or_buffer(\n\u001b[0;32m    717\u001b[0m     path_or_buf,\n\u001b[0;32m    718\u001b[0m     encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[0;32m    719\u001b[0m     compression\u001b[39m=\u001b[39;49mcompression,\n\u001b[0;32m    720\u001b[0m     mode\u001b[39m=\u001b[39;49mmode,\n\u001b[0;32m    721\u001b[0m     storage_options\u001b[39m=\u001b[39;49mstorage_options,\n\u001b[0;32m    722\u001b[0m )\n\u001b[0;32m    724\u001b[0m handle \u001b[39m=\u001b[39m ioargs\u001b[39m.\u001b[39mfilepath_or_buffer\n\u001b[0;32m    725\u001b[0m handles: \u001b[39mlist\u001b[39m[BaseBuffer]\n",
+      "File \u001b[1;32mc:\\Users\\39349\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\common.py:456\u001b[0m, in \u001b[0;36m_get_filepath_or_buffer\u001b[1;34m(filepath_or_buffer, encoding, compression, mode, storage_options)\u001b[0m\n\u001b[0;32m    452\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\n\u001b[0;32m    453\u001b[0m     \u001b[39mhasattr\u001b[39m(filepath_or_buffer, \u001b[39m\"\u001b[39m\u001b[39mread\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39mhasattr\u001b[39m(filepath_or_buffer, \u001b[39m\"\u001b[39m\u001b[39mwrite\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    454\u001b[0m ):\n\u001b[0;32m    455\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mInvalid file path or buffer object type: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(filepath_or_buffer)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m--> 456\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(msg)\n\u001b[0;32m    458\u001b[0m \u001b[39mreturn\u001b[39;00m IOArgs(\n\u001b[0;32m    459\u001b[0m     filepath_or_buffer\u001b[39m=\u001b[39mfilepath_or_buffer,\n\u001b[0;32m    460\u001b[0m     encoding\u001b[39m=\u001b[39mencoding,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    463\u001b[0m     mode\u001b[39m=\u001b[39mmode,\n\u001b[0;32m    464\u001b[0m )\n",
+      "\u001b[1;31mValueError\u001b[0m: Invalid file path or buffer object type: <class 'dict'>"
      ]
     }
    ],
    "source": [
+    "'''\n",
+    "export csv\n",
+    "'''\n",
     "import requests\n",
+    "import pandas as pd\n",
     "\n",
-    "# 定义测试数据\n",
     "query_params = {\n",
     "    \"query_type\": \"useCase1\",\n",
     "    \"sensor_ids\": [\"cpu0\", \"cpu1\"],\n",
-    "    \"start_time\": \"2023-11-07T15:30:00.000000Z\",\n",
-    "    \"stop_time\": \"2023-11-07T16:00:00.000000Z\"\n",
+    "    \"start_time\": \"2023-11-08T11:00:00.000000Z\",\n",
+    "    \"stop_time\": \"2023-11-08T13:00:00.000000Z\"\n",
     "}\n",
-    "query_params = {\n",
-    "    \"sensor_ids\":\"['cpu0', 'cpu1', 'cpu2', 'cpu3', 'cpu4']\",\n",
-    "    \"start_time\":\"2023-11-07T15:30:00.000000Z\",\n",
-    "    \"stop_time\":\"2023-11-07T17:00:00.000000Z\",\n",
-    "    \"query_type\":\"use_case2\"\n",
-    "}\n",
-    "# 发送 POST 请求\n",
-    "response = requests.post(\"http://localhost:8000/export_csv/\", json=query_params)\n",
     "\n",
-    "# 检查响应\n",
+    "response = requests.post(\"http://localhost:8000/csv/\", json=query_params)\n",
+    "\n",
     "if response.status_code == 200:\n",
-    "    print(\"CSV 文件生成成功！\")\n",
-    "else:\n",
-    "    print(f\"响应状态码: {response.status_code}\")\n",
-    "    print(\"CSV 文件生成失败。\")\n",
-    "\n",
-    "# 如果需要，可以打印响应内容\n",
-    "# print(response.text)\n"
+    "    print(\"status 200\")\n",
+    "#     json_data = response.json()\n",
+    "#     df = pd.read_json(json_data)\n",
+    "# else:\n",
+    "#     print(f\"响应状态码: {response.status_code}\")\n",
+    "#     print(\"CSV 文件生成失败。\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_time</th>\n",
+       "      <th>_value</th>\n",
+       "      <th>_measurement</th>\n",
+       "      <th>sensor_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-11-07 21:30:05.308</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-11-07 21:30:11.310</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-11-07 21:30:17.311</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-11-07 21:30:23.312</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-11-07 21:30:29.316</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1159</th>\n",
+       "      <td>2023-11-07 22:27:48.440</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1160</th>\n",
+       "      <td>2023-11-07 22:27:54.442</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1161</th>\n",
+       "      <td>2023-11-07 22:28:00.445</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1162</th>\n",
+       "      <td>2023-11-07 22:28:06.444</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1163</th>\n",
+       "      <td>2023-11-07 22:28:12.444</td>\n",
+       "      <td>32.8</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>cpu1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1164 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       _time  _value _measurement sensor_name\n",
+       "0    2023-11-07 21:30:05.308     0.0           PC        cpu0\n",
+       "1    2023-11-07 21:30:11.310     0.0           PC        cpu0\n",
+       "2    2023-11-07 21:30:17.311     0.0           PC        cpu0\n",
+       "3    2023-11-07 21:30:23.312     4.6           PC        cpu0\n",
+       "4    2023-11-07 21:30:29.316     0.0           PC        cpu0\n",
+       "...                      ...     ...          ...         ...\n",
+       "1159 2023-11-07 22:27:48.440     0.0           PC        cpu1\n",
+       "1160 2023-11-07 22:27:54.442     0.0           PC        cpu1\n",
+       "1161 2023-11-07 22:28:00.445     8.7           PC        cpu1\n",
+       "1162 2023-11-07 22:28:06.444     0.0           PC        cpu1\n",
+       "1163 2023-11-07 22:28:12.444    32.8           PC        cpu1\n",
+       "\n",
+       "[1164 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -852,28 +997,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "current_directory = os.getcwd()\n",
+    "current_directory\n",
+    "subdirectory = \"imsub\"\n",
+    "final_directory = os.path.join(current_directory, subdirectory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\39349\\\\Documents\\\\GitHub\\\\DeviceHive-Yingjun\\\\influx-connector\\\\imsub'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['cpu0', 'cpu1', 'cpu2', 'cpu3', 'cpu4']\n"
+      "solutions\\solver9.csv\n"
      ]
     }
    ],
    "source": [
-    "user_input = \"['cpu0', 'cpu1', 'cpu2', 'cpu3', 'cpu4']\"\n",
-    "\n",
-    "# 移除字符串中的方括号和单引号\n",
-    "cleaned_input = user_input.replace(\"[\", \"\").replace(\"]\", \"\").replace(\"'\", \"\")\n",
-    "\n",
-    "# 使用逗号分割字符串并创建列表\n",
-    "sensor_ids_list = cleaned_input.split(', ')\n",
-    "\n",
-    "# 输出结果\n",
-    "print(sensor_ids_list)"
+    "print(os.path.join(\"solutions\", \"solver9.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'uuid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\39349\\Documents\\GitHub\\DeviceHive-Yingjun\\influx-connector\\query.ipynb Cell 24\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/39349/Documents/GitHub/DeviceHive-Yingjun/influx-connector/query.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m unique_id \u001b[39m=\u001b[39m uuid\u001b[39m.\u001b[39muuid4()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'uuid' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import uuid\n",
+    "unique_id = uuid.uuid4()"
    ]
   },
   {
